--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -60,7 +60,7 @@
 
 body {
   min-height: 100vh;
-  color: var(--color-text);
+  color: var(--vt-c-white-soft);
   background: var(--color-background);
   transition:
     color 0.5s,
@@ -83,4 +83,28 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+ul {
+  display: flex;
+  flex-direction: column;
+  text-decoration: none;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  gap: 1rem;
+}
+
+h2 {
+  margin-bottom: 1rem;
+}
+
+.button {
+  border-radius: 8px;
+  background-color: rgb(30, 30, 134);
+  border: 1px solid rgba(9, 9, 121, 0.9878545168067226);
+  color: #fff;
+  padding: 0.75rem 1.25rem;
+  outline: none;
+  border: none;
 }
